used cookies for auth

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,23 +1,7 @@
 @import "../../global.scss";
 
-.header {
-    background:$dark-green;
-    padding:10px;
-    position: relative;
-    z-index: 1;
-
-    // .account {
-    //     list-style: none;
-    //     display: flex;
-    //     flex-direction: row;
-    //     align-items: center;
-    //     justify-content: space-between;
-    //     gap: 10px;
-
-    //     .shop_icon {
-    //         color: #fff;
-    //     }
-    // }
+.navbar{
+    min-width: 500px;
 }
 .main-menu-wrap{
     display: flex;
@@ -25,15 +9,26 @@
     justify-content: space-between;
 }
 
+.navbar-toggle-custom {
+    background: white;
+}
+
+.offcanvas{
+    background: $dark-green;
+
+    #offcanvasNavbarDropdown-expand {
+        background: $dark-green;
+    }
+}
+
 .site-logo {
     height: 60px;
     width: 150px;
+    object-fit: fill;
 }
 
 .item-count {
     color:white;
-    // position: absolute;
-    
     background:red;
     display: unset;
     border-radius: 50%;
