--- a/src/components/Auth/LoginForm.scss
+++ b/src/components/Auth/LoginForm.scss
@@ -3,18 +3,16 @@
 .login-container {
     box-shadow: 0 18px 200px -60px black;
     border-radius: 50px;
-    width: 100%;
+    height: max-content;
     position: relative;
     backdrop-filter: blur(15px);
     border: 2px solid #ffffff40;
-    padding: 1rem 2rem;
+    padding: 1rem 4rem;
     display: flex;
     align-items: center;
-    align-content: stretch;
+    align-content: center;
     justify-content: space-around;
     flex-direction: column;
-    margin-top: 25px;
-    padding-top: 20px;
 
     .header_image {
         margin: auto;
@@ -44,8 +42,5 @@
             align-items: center;
             justify-content: center;
         }
-    }
-    a {
-        color:blue;
     }
 }
