--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -176,7 +176,7 @@
         font-size: 0.75rem;
         font-family: "Public Sans", sans-serif;
         font-weight: 700;
-        bottom: 100px;
+        bottom: 125px;
         left: 16px;
         z-index: 9;
         position: absolute;
@@ -187,25 +187,16 @@
 
     .discount {
         text-decoration: line-through;
-        height: 25px;
-        min-width: 22px;
-        line-height: 0;
-        border-radius: 6px;
-        cursor: default;
         align-items: center;
-        white-space: nowrap;
         display: inline-flex;
         justify-content: center;
         color:red;
+        font-size: 0.85rem;
     }
     .discounted-price {
-        height: 25px;
-        min-width: 22px;
         line-height: 0;
         border-radius: 6px;
-        cursor: default;
         align-items: center;
-        white-space: nowrap;
         display: inline-flex;
         justify-content: center;
         color:$dark-green;
