--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,12 +1,8 @@
 @import '../../global.scss';
 
 footer {
-    background-color: $dark-green;
-
+    min-width: 500px;
 }
-
-
-
 .social {
     
     list-style-type: none;
@@ -15,4 +11,8 @@ footer {
     align-items: center;
     gap: 10px;
     
+}
+
+a {
+    color:$dark-green;
 }
