--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,6 +11,7 @@
 .product-card {
     width: 16rem;
     min-width: 250px;
+    height: 500;
     z-index: 0;
     color:rgb(33,43, 54);
     background-image: none;
@@ -72,11 +73,11 @@
         background-color: rgb(0, 184, 217);
         
         
-        &.new {
+        &.NEW {
             background-color: rgb(34, 240, 51);
         }
         
-        &.hot {
+        &.HOT {
             background-color: rgb(233, 30, 57);
         }
     }
