--- a/src/pages/productDetail/productDetail.scss
+++ b/src/pages/productDetail/productDetail.scss
@@ -3,7 +3,9 @@
 .product-detail {
 
     .product-image{
-        min-width: 450px;
+        min-width: 420px;
+        height: 600px;
+        object-fit: cover;
     }
 
     .product-desc {
@@ -25,7 +27,7 @@
             display: inline-flex;
             justify-content: center;
             padding: 0px 8px;
-            color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
             font-size: 0.75rem;
             font-family: "Public Sans", sans-serif;
             font-weight: 700;
@@ -35,11 +37,11 @@
             background-color: rgb(0, 184, 217);
             
             
-            &.new {
+            &.NEW {
                 background-color: rgb(34, 240, 51);
             }
             
-            &.hot {
+            &.HOT {
                 background-color: rgb(233, 30, 57);
             }
         }
@@ -139,4 +141,17 @@
             color:none;
         }
     }
+}
+
+.image-selector {
+    cursor: pointer;
+    opacity: 0.5;
+    &:hover {
+        opacity: 0.8;
+    }
+    
+}
+.selected-image {
+    border: 2px solid green;
+    opacity: 1;
 }
