--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -202,4 +202,8 @@
         justify-content: center;
         color:$dark-green;
     }
+
+    .card-img-top {
+        object-fit: contain;
+    }
 }
