Product detail page layout fixed

--- a/src/pages/productDetail/productDetail.scss
+++ b/src/pages/productDetail/productDetail.scss
@@ -3,22 +3,20 @@
 .product-detail {
 
     .product-description {
-        min-height: 725px;
+        min-height: 650px;
     }
 
     .product-image{
         min-width: 420px;
         height: 600px;
-        object-fit: contain;
-    }
-
-    .image-selector{
-        max-width: 550px;
-        min-width: 60px;
     }
     
+    // .main-image {
+    //     object-fit: contain;
+        
+    // }
+    
     .image-carousel {
-        width: 500px;
         overflow: auto;
     }
 
