--- a/src/pages/productDetail/productDetail.scss
+++ b/src/pages/productDetail/productDetail.scss
@@ -2,9 +2,9 @@
 
 .product-detail {
 
-    .product-description {
-        min-height: 650px;
-    }
+    // .product-description {
+    //     min-height: 650px;
+    // }
 
     .product-image{
         min-width: 420px;
@@ -18,9 +18,25 @@
     
     .image-carousel {
         overflow: auto;
+
+        .image-selector {
+            cursor: pointer;
+            opacity: 0.5;
+            min-width: 60px;
+            min-height: 60px;
+            
+            &:hover {
+                opacity: 0.8;
+            }    
+            
+            &.selected-image {
+                border: 2px solid green;
+                opacity: 1;
+            }
+        }
     }
 
-    .product-desc {
+    .product-description {
 
         min-width: 450px;
 
@@ -30,14 +46,14 @@
 
         .status {
             height: 24px;
-            min-width: 22px;
+            width: 35px;
             line-height: 0;
             border-radius: 6px;
             cursor: default;
             align-items: center;
             white-space: nowrap;
             display: inline-flex;
-            justify-content: center;
+            justify-content: start;
             padding: 0px 8px;
             color: rgb(255, 255, 255);
             font-size: 0.75rem;
@@ -51,10 +67,12 @@
             
             &.NEW {
                 background-color: rgb(34, 240, 51);
+                // display: block;
             }
             
             &.HOT {
                 background-color: rgb(233, 30, 57);
+                // display: block;
             }
         }
     }
@@ -155,15 +173,3 @@
     }
 }
 
-.image-selector {
-    cursor: pointer;
-    opacity: 0.5;
-    &:hover {
-        opacity: 0.8;
-    }
-    
-}
-.selected-image {
-    border: 2px solid green;
-    opacity: 1;
-}
