--- a/src/pages/productDetail/productDetail.scss
+++ b/src/pages/productDetail/productDetail.scss
@@ -24,6 +24,8 @@
             opacity: 0.5;
             min-width: 60px;
             min-height: 60px;
+            max-width: 60px;
+            max-height: 60px;
             
             &:hover {
                 opacity: 0.8;
