updated logo and implemented search

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -35,8 +35,8 @@
 
 .site-logo {
     height: 60px;
-    width: 150px;
-    object-fit: fill;
+    width: 60px;
+    object-fit: cover;
 }
 
 .item-count {
