--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,7 +11,8 @@
 .product-card {
     width: 16rem;
     min-width: 250px;
-    height: 500;
+    min-height: 450px;
+    max-height: 450px;
     z-index: 0;
     color:rgb(33,43, 54);
     background-image: none;
@@ -144,7 +145,7 @@
         background-color: rgb(255, 171, 0);
         box-shadow: rgb(255 171 0 / 24%) 0px 8px 16px 0px;
         right: 20px;
-        bottom: 125px;
+        bottom: 160px;
         z-index: 9;
         opacity: 0;
         position: absolute;
@@ -177,7 +178,7 @@
         font-size: 0.75rem;
         font-family: "Public Sans", sans-serif;
         font-weight: 700;
-        bottom: 125px;
+        bottom: 160px;
         left: 16px;
         z-index: 9;
         position: absolute;
@@ -204,6 +205,7 @@
     }
 
     .card-img-top {
-        object-fit: contain;
+        object-fit: fill;
+        border-radius: 20px;
     }
 }
