Separated admin panel

--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -3,3 +3,11 @@
 .active-tab {
     background-color: $accent;
 }
+
+.custom-modal .modal-content {
+    background-color: $secondary;
+}
+
+.table-header {
+    border-width: 2px;
+}
