fixed the color profile for all pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,13 @@
 @import "./global.scss";
 
 
-.section {
-    // background-image: url("../assets/bg.png");
-    background-color: #cccccc;
+.user-layout {
+    background-color: #e3e3e3;
     background-repeat: no-repeat;
-    // height: 500px;
     background-position: 95%;
-    margin-top: -3rem;
+    
 }
 
-// .showcase {
-//     height: 100vh;
-// }
+// .admin-layout {
 
+// }
