--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,3 +3,29 @@
 .home {
     min-width: 100%;
 }
+
+.search {
+    padding: 0 20px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
+    border-radius:6px;
+    background-color: #fff;
+    min-width: 350px;
+    
+
+    .searchIcon {
+        // color: #fff;
+        font-size: 22px;
+        margin-right: 15px;
+    }
+    
+    input {
+        padding: 10px;
+        width: 100%;
+        font-size: 17px;
+        border: none;
+
+        &:focus {
+            outline-width: 0;
+        }
+    }
+}
