--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .navbar{
-    min-width: 500px;
+    min-width: 350px;
     height: 65px;
 }
 .main-menu-wrap{
@@ -32,12 +32,17 @@
         }
     }
 }
+.logo {
+    width: 60px;
+    height: 60px;
+}
 
 
 .site-logo {
     // height: 60px;
-    width: 500px;
-    object-fit: contain;
+    width: 60px;
+    object-fit: cover;
+    margin-top: -1.8rem;
 }
 
 .item-count {
