--- a/src/variable.scss
+++ b/src/variable.scss
@@ -2,11 +2,12 @@ $width: 768px;
 
 $white:#e4e5eb;
 $royal-green : #19D67B;
-$royal-blue : #09108E;
+$royal-blue : #05253C;
 $royal-yellow : #FCE880;
 $dark-green : #346F64;
 $accent:#C2ECF2;
 $raisin: #1A1924;
+$orange: #F16022;
 
 $theme-colors: (
   "primary": $royal-green,
@@ -15,6 +16,7 @@ $theme-colors: (
   "dark": $royal-blue,
   "light": $white,
   "raisin": $raisin,
+  "orange": $orange,
 );
 
 $custom-colors: (
@@ -26,6 +28,7 @@ $custom-colors: (
   "white": $white,
   "black": #000,
   "raisin": #1A1924,
+  "orange": $orange,
 );
 
 
