--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -9,22 +9,20 @@
 }
 
 .product-card {
-    width: 16rem;
-    min-width: 250px;
-    min-height: 450px;
-    max-height: 450px;
+    width: 200px;
+    min-width: 100px;
+    min-height: 300px;
+    max-height: 300px;
     z-index: 0;
     color:rgb(33,43, 54);
-    background-image: none;
     overflow: hidden;
-    position: relative;
     box-shadow: rgb(0 0 0 / 16%) 0px 4px 8px 0px;
     border-radius: 16px;
     transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     
     a{
+        color: $royal-blue;
         text-decoration: none;
-        color: $royal-green;
 
         &:hover {
             text-decoration: underline;
@@ -66,8 +64,8 @@
         font-size: 0.75rem;
         font-family: "Public Sans", sans-serif;
         font-weight: 700;
-        top: 16px;
-        right: 16px;
+        top: 10px;
+        right: 10px;
         z-index: 9;
         position: absolute;
         text-transform: uppercase;
@@ -98,8 +96,8 @@
         font-size: 0.75rem;
         font-family: "Public Sans", sans-serif;
         font-weight: 700;
-        top: 16px;
-        left: 16px;
+        top: 10px;
+        left: 10px;
         z-index: 9;
         position: absolute;
         text-transform: uppercase;
@@ -130,11 +128,6 @@
         vertical-align: middle;
         appearance: none;
         text-decoration: none;
-        font-weight: 700;
-        line-height: 1.71429;
-        font-size: 0.875rem;
-        text-transform: capitalize;
-        font-family: "Public Sans", sans-serif;
         min-height: 36px;
         border-radius: 50%;
         padding: 0px;
@@ -142,10 +135,10 @@
         width: 48px;
         height: 48px;
         color: rgb(33, 43, 54);
-        background-color: rgb(255, 171, 0);
+        background-color: $orange;
         box-shadow: rgb(255 171 0 / 24%) 0px 8px 16px 0px;
-        right: 20px;
-        bottom: 160px;
+        right: 15px;
+        bottom: 130px;
         z-index: 9;
         opacity: 0;
         position: absolute;
@@ -154,7 +147,7 @@
         &:hover {
             display: inline-flex;
             box-shadow:none;
-            background-color: rgb(183, 110, 0);
+            background-color: $orange ;
         }
     }
 
@@ -179,8 +172,8 @@
         font-size: 0.75rem;
         font-family: "Public Sans", sans-serif;
         font-weight: 700;
-        bottom: 160px;
-        left: 16px;
+        bottom: 120px;
+        left: 10px;
         z-index: 9;
         position: absolute;
         text-transform: uppercase;
@@ -206,7 +199,8 @@
     }
 
     .card-img-top {
-        object-fit: fill;
+        object-fit: cover;
         border-radius: 20px;
+        min-height: 215px;
     }
 }
