--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,11 +5,11 @@
 }
 
 .search {
+    min-width: 420px;
     padding: 0 20px;
     box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
     border-radius:6px;
     background-color: #fff;
-    min-width: 200px;
     
 
     .searchIcon {
@@ -20,12 +20,16 @@
     
     input {
         padding: 10px;
-        width: 100%;
-        font-size: 17px;
+        // width: 100%;
+        font-size: 16px;
         border: none;
 
         &:focus {
             outline-width: 0;
         }
     }
+}
+
+.products {
+    min-width: 430px;
 }
