--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -1,27 +1,27 @@
 @import "../../global.scss";
 
-.search {
-    padding: 0 20px;
-    box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
-    border-radius:6px;
-    background-color: #fff;
-    min-width: 350px;
+// .search {
+//     padding: 0 20px;
+//     box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
+//     border-radius:6px;
+//     background-color: #fff;
+//     min-width: 350px;
     
 
-    .searchIcon {
-        // color: #fff;
-        font-size: 22px;
-        margin-right: 15px;
-    }
+//     .searchIcon {
+//         // color: #fff;
+//         font-size: 22px;
+//         margin-right: 15px;
+//     }
     
-    input {
-        padding: 10px;
-        width: 100%;
-        font-size: 17px;
-        border: none;
+//     input {
+//         padding: 10px;
+//         width: 100%;
+//         font-size: 17px;
+//         border: none;
 
-        &:focus {
-            outline-width: 0;
-        }
-    }
-}
+//         &:focus {
+//             outline-width: 0;
+//         }
+//     }
+// }
