--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -20,22 +20,11 @@
 
 .side-menu {
     min-width: fit-content;
-    // min-width: 300px;
-    min-height: 100vh;
-    background-color: white;
-    // position: fixed;
-    top: 0;
-    // right: -300px;
-    // z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    width: max-content;
     transition: all 1s ease;
-   
-    &.active{
-        right: 0;
-    }
+    position: relative;
+    left: 0;
+
     
     ul{
         margin: 0;
