--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -20,7 +20,7 @@
     
     input {
         padding: 10px;
-        // width: 100%;
+        width: 100%;
         font-size: 16px;
         border: none;
 
