fixed issues with product description page

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,8 +5,8 @@
 }
 
 .search {
-    min-width: 420px;
-    padding: 0 20px;
+    min-width: 350px;
+    // padding: 0 20px;
     box-shadow: 0 2px 4px rgb(0 0 0 / 8%);
     border-radius:6px;
     background-color: #fff;
@@ -31,5 +31,5 @@
 }
 
 .products {
-    min-width: 430px;
+    min-width: 360px;
 }
