--- a/src/components/Admin/Admin.scss
+++ b/src/components/Admin/Admin.scss
@@ -11,3 +11,26 @@
 .table-header {
     border-width: 2px;
 }
+
+
+.avatar-place {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    background: #004D3C;
+    font-size: 1.8rem;
+    color: #fff;
+    text-align: center;
+    line-height: 3.5rem;
+    margin: 0.5rem 0 !important;
+}
+
+.SUCCESS {
+    background-color: $royal-green !important;
+}
+
+.order-table {
+    min-width: 250px;
+    padding: 0;
+}
